# pal_vision_segmentation

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
cfg/: DepthSegment.cfg  DisparitySegment.cfg  HistogramSegment.cfg  TemplateSegment.cfg
launch/: histogram_segment.launch  template_segment.launch
src/: disparity_segmentation.cpp  histogram_segmentation.cpp  template_segmentation.cpp
test/: histogram_segmentation_unit_test.cpp
